@@ -4,7 +4,6 @@ import static java.util.Objects.requireNonNull;
 import static nustracker.logic.parser.CliSyntax.PREFIX_FILENAME;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.stream.Collectors;
 
 import javafx.collections.ObservableList;
@@ -40,7 +39,7 @@ public class ExportCommand extends Command {
      */
     public ExportCommand(String fileName) {
         requireNonNull(fileName);
-        this.pathToExport = Paths.get("data", fileName + ".csv");
+        this.pathToExport = Path.of(System.getProperty("user.dir") + "/data/" + fileName + ".csv");
     }
 
 
